refactor: SonarQube에서 지적하던 문제점 수정